manifests/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forward-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forward-auth
  template:
    metadata:
      labels:
        app: forward-auth
    spec:
      containers:
        - name: forward-auth
          image: metalogic/forward-auth:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - mountPath: /usr/local/etc/forward-auth
              name: etcdata
      volumes:
        - name: etcdata
          persistentVolumeClaim:
            claimName: etc-forward-auth-volume-claim
