manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forward-auth-service
spec:
  ports:
  - name: http
    targetPort: 8080
    port: 8080
  selector:
    app: forward-auth
