manifests/base/ingress.yaml
# IngresRoute
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: forward-auth-ingress-route
spec:
  entryPoints: 
    - web
  routes:
  - match: Host(`forward-auth.localhost`) 
    kind: Rule
    middlewares:
    - name: forward-auth-middleware
    services:
    - name: forward-auth-service
      port: 8080
